--- a/content/notes/data-wrangling-lecture-notes/pubdir/index.Rmd
+++ b/content/notes/data-wrangling-lecture-notes/pubdir/index.Rmd
@@ -1,16 +1,10 @@
 ---
 title: 'Data wrangling: Lecture notes'
 author: Claudius Gräbner-Radkowitsch
-date: '2023-03-09'
+date: '2023-04-19'
 slug: data-wrangling-lecture-notes
 documentclass: scrartcl
 output: 
-  html_document:
-    theme: readable
-    highlight: tango
-    toc: true
-    toc_depth: 2
-    number_sections: true
   pdf_document:
     highlight: tango
     toc: true
@@ -18,6 +12,12 @@ output:
     number_sections: true
     includes:
       in_header: "preamble.tex"
+  html_document:
+    theme: readable
+    highlight: tango
+    toc: true
+    toc_depth: 2
+    number_sections: true
 ---
 
 # Packages and data used
@@ -29,7 +29,11 @@ library(data.table)
 library(here)
 ```
 
-```{r, include=FALSE, eval=FALSE}
+```{r}
+#| create-data-raw
+#| include: false
+#| eval: false
+
 data_raw <- WDI::WDI(
   country = c("DE", "AT", "GR", "IT"), 
   start = 1990, 
@@ -47,21 +51,50 @@ data_raw <- WDI::WDI(
     all_of(c("country", "year", "unemp", "gdp"))
   )
 
-fwrite(x = data_raw, file = "data/wrangling_slides.csv")
+fwrite(
+  x = data_raw, 
+  file = "data/wrangling_data_raw.csv")
+```
 
-swiid_red<- fread(file = "data/swiid9_2_summary.csv") %>%
-  filter(
-    country %in% c("Germany", "Greece"),
-    year %in% c(2017, 2018)
-  ) %>%
-  select(
-    all_of(c("country", "year", "gini_disp"))
-  ) %>%
-  rename(gini=gini_disp)
+```{r}
+#| create-data-raw-long
+#| include: false
+#| eval: false
 
-fwrite(x = swiid_red, file = "data/wrangling_slides_gini.csv")
+data_raw <- fread(file = "data/wrangling_data_raw.csv")
 
-swiid_join <- fread(file = "data/swiid9_2_summary.csv") %>%
+data_raw_long <- tidyr::pivot_longer(
+  data = data_raw, 
+  cols = dplyr::all_of(c("unemp", "gdp")), 
+  names_to = "variable", 
+  values_to = "value")
+
+fwrite(
+  x = data_raw_long, 
+  file = "data/wrangling_data_raw_long.csv")
+```
+
+
+```{r}
+#| create-gdp-join
+#| include: false
+#| eval: false
+
+gdp_join <- data_raw %>%
+  select(-unemp)
+
+fwrite(
+  x = gdp_join, 
+  file = "data/wrangling_gdp_join.csv")
+```
+
+
+```{r}
+#| create-gini-join
+#| include: false
+#| eval: false
+
+gini_join <- fread(file = "data/swiid9_2_summary.csv") %>%
   filter(
     country %in% c("Greece"),
     year %in% c(2015, 2017)
@@ -71,10 +104,16 @@ swiid_join <- fread(file = "data/swiid9_2_summary.csv") %>%
   ) %>%
   rename(gini=gini_disp)
 
-fwrite(x = swiid_join, file = "data/wrangling_slides_gini_grc.csv")
+fwrite(
+  x = gini_join, 
+  file = "data/wrangling_gini_join.csv")
 ```
 
-```{r, include=FALSE, eval=FALSE}
+```{r}
+#| create-data-final-expl
+#| include: false
+#| eval: false
+
 data_final_expl <- WDI::WDI(
   country = c("DE", "AT", "GR", "IT"), 
   start = 2000, 
@@ -83,27 +122,28 @@ data_final_expl <- WDI::WDI(
   ) %>%
   select(-iso2c)
 
-fwrite(x = data_final_expl, 
-       file = "data/wrangling_slides_final_expl.csv")
+fwrite(
+  x = data_final_expl, 
+  file = "data/wrangling_data_final_expl.csv")
 ```
 
 ```{r, include=FALSE}
-gini_red <- fread(file = "data/wrangling_slides_gini.csv")
-data_raw <- fread(file = "data/wrangling_slides.csv")
-data_raw_long <- fread(file = "data/wrangling_slide_long.csv")
-data_final_expl <- fread(file = "data/wrangling_slides_final_expl.csv")
-swiid_join <- fread(file = "data/wrangling_slides_gini_grc.csv")
+data_raw <- fread(file = "data/wrangling_data_raw.csv")
+data_raw_long <- fread(file = "data/wrangling_data_raw_long.csv")
+data_final_expl <- fread(file = "data/wrangling_data_final_expl.csv")
+gini_join <- fread(file = "data/wrangling_gini_join.csv")
+gdp_join <- fread(file = "data/wrangling_gdp_join.csv")
 ```
 
-The data sets used in these notes are available from the course webpage:
+The data sets used in these notes are available from the [material page](/material/):
 
-* `wrangling_slides.csv` (`data_raw`)
-* `wrangling_slides.csv` (`data_raw_long`)
-* `wrangling_slides_gini.csv` (`gini_red`)
-* `wrangling_slides_final_expl.csv` (`data_final_expl`)
-* `wrangling_slides_gini_grc.csv` (`swiid_join`)
+* `wrangling_data_raw.csv` (`data_raw`)
+* `wrangling_data_raw_long.csv` (`data_raw_long`)
+* `wrangling_data_final_expl.csv` (`data_final_expl`)
+* `wrangling_gini_join.csv` (`gini_join`)
+* `wrangling_gdp_join.csv` (`gdp_join`)
 
-The brackets show the names of the data sets used below
+The brackets show the names of the data sets used below.
 
 # General remarks
 
@@ -112,10 +152,22 @@ The brackets show the names of the data sets used below
 * Before starting to wrangle, make a note to yourself of how the final data set should look like; 
   * Then think about the different steps you need to take to reach this goal;
   * Each step should only address one single wrangling challenge
-* It is often useful to save the wrangling code in one script in which you import raw data in the beginning and save tidy data in the end
-* Then you keep data wrangling, visualization, and modlling in separate files
+* It is often useful to save the wrangling code in one script in which you 
+import raw data in the beginning and save tidy data in the end; this allows you 
+to keep data wrangling, visualization, and modelling in separate files
 
-# Reshaping data from long to wide format
+# Reshaping data with the tidyr package
+
+At the end of each data wrangling activity, you should have created 
+[tidy data](https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html). 
+The R package that contains functions meant to assist you in 
+this process is called [tidyr](https://tidyr.tidyverse.org/).
+While it contains functions for various purposes, the by far most common
+(and, to be honest, to most demanding) task is to reshape data from long to 
+wide format and vice versa. This will be the focus of this section. 
+Tutorials on the other `tidyr`-functions can be found on the official package
+documentation, but these functions are more specific and not as important
+in daily practice as those for reshaping data.
 
 ## Wide and long format: definition
 
@@ -144,10 +196,11 @@ has its own column:
 data_raw
 ```
 
-Here, we have more columns since the three variables, the unemployment rate and
-GDP, have their own columns.
-In effect, the data set has much more columns, but tends to be shorter in
-the sense of having fewer rows.
+While the number of columns remains the same, the data set has relatively more
+columns as compared to the rows. At the same time, it tends to be shorter in
+the sense of having fewer rows.^[If we had a data set with three instead of
+two variables, the wide data set would have the same number of rows, but 
+more columns, i.e. it would be wider in an absolute sense as well.]
 
 While the long format is often easier to read and preferable when communicating
 data to humans, making data tidy often involves the task of making data 
@@ -201,8 +254,8 @@ The arguments `names_to` and `values_to` are not strictly necessary since they
 have useful default values, but its usually nicer to be explicit.
 
 When specifying the argument `cols` you have several possibilities. The 
-safest variant is to use the function `dplyr::all_of()` and pass a character 
-vector with the column names. You can save a lot of writing by using so called
+simplest variant is to pass a character vector with the column names. 
+But note that you can save a lot of writing by using so called
 [selection helpers](https://dplyr.tidyverse.org/reference/dplyr_tidy_select.html), 
 a very useful tool we will learn about later.
 
@@ -211,7 +264,7 @@ In our case this amounts to:
 ```{r}
 data_raw_long <- tidyr::pivot_longer(
   data = data_raw_wide, 
-  cols = dplyr::all_of(c("unemp", "gdp", "gini")), 
+  cols = c("unemp", "gdp"), 
   names_to = "indicator", 
   values_to = "values")
 data_raw_long
@@ -234,7 +287,7 @@ to the function you use.
 
 In other words, `x %>% f(y)` (or `x %>% f(., y)`) is equivalent to `f(x, y)`.
 
-But lets look at an example! Assume we start with this data set:
+But lets look at an example! Assume we start with the following data set:
 
 ```{r, echo=TRUE}
 pipe_data_raw <- data_raw %>%
@@ -246,7 +299,7 @@ And what we want is this:
 
 ```{r, echo=FALSE}
 pipe_data_raw %>%
-  pivot_longer(cols = all_of(c("gdp", "unemp"))) %>%
+  pivot_longer(cols = c("gdp", "unemp")) %>%
   pivot_wider(names_from = "year", values_from = "value")
 ```
 
@@ -294,7 +347,20 @@ The `%>%`-pipe allows you to write very readable code, so make sure you use it
 often. But for code development it might be nevertheless helpful to write the
 intermediate steps explicitly.
 
-# Creating or manipulating variables
+# Manipulating data with the dplyr package
+
+The package `tidyr` is for turning messy data sets into tidy data sets. 
+Another important part of data preparation is to manipulate an existing data
+set. To do this, the package [dplyr](https://dplyr.tidyverse.org/) contains 
+many useful functions. You will regularly use functions from both the `tidyr` and
+`dplyr` package within your script for data preparation: often, you start with
+a messy data set, make it tidy using functions from `tidyr` and then use
+functions from `dplyr` to manipulate variables until your data set contains all 
+the information you want. Thus, in the following we cover the most frequently
+used `dplyr`-functions. A complete documentation of the whole package can be
+found on the official [dplyr webpage](https://dplyr.tidyverse.org/).
+
+## Creating or manipulating variables
 
 The function `dplyr::mutate()` is used both for manipulating existing 
 columns as well as creating new columns. In the first case the name of the 
@@ -305,7 +371,7 @@ Consider the following data set with the unemployment rate as an example:
 
 ```{r, include=FALSE}
 data_unemp <- data_raw %>%
-  select(all_of(c("country", "year", "unemp"))) %>%
+  select(c("country", "year", "unemp")) %>%
   pivot_wider(names_from = "country", values_from = "unemp") 
 ```
 
@@ -339,7 +405,7 @@ data_unemp %>%
 The only difference here was that the left-hand-side name of the column to 
 be manipulated did not exist before!
 
-# Filtering rows
+## Filtering rows
 
 The function `dplyr::filter()` can be used to filter rows according to 
 certain conditions. The conditions must evaluate for each cell entry to 
@@ -376,7 +442,7 @@ data_raw_long %>%
     values < 50000)
 ```
 
-# Selecting columns 
+## Selecting columns 
 
 When you only want to keep certain *columns* we speak of selecting (rather than
 filtering) columns. This is done - surprise - via the function ´dplyr::select()`.
@@ -400,29 +466,37 @@ data_raw %>%
 But this is often error-prone. Thus, it is usually better to refer to the columns via 
 [selection helpers](https://dplyr.tidyverse.org/reference/dplyr_tidy_select.html),
 which is also the most flexible version. While we will learn about more selection 
-helpers later, here we will only use `dplyr::all_of()`, which accepts a character
+helpers later, here we will mainly use `dplyr::all_of()`, which accepts a character
 vector of column names:
 
 ```{r}
 data_raw %>%
-  dplyr::select(dplyr::all_of(c("country", "year", "gini")))
+  dplyr::select(dplyr::all_of(c("country", "year", "gdp")))
 ```
 
 > **Caution:** Do not forget the `c()`! Otherwise:
 
 ```{r, error=TRUE}
 data_raw %>%
-  dplyr::select(dplyr::all_of("country", "year", "gini"))
+  dplyr::select(dplyr::all_of("country", "year", "gdp"))
 ```
 
 > It is also possible to define the column vector first:
 
 ```{r}
-cols2keep <- c("country", "year", "gini")
+cols2keep <- c("country", "year", "gdp")
 data_raw %>%
   dplyr::select(dplyr::all_of(cols2keep))
 ```
 
+> Selection helpers allow you to specify the columns to be selected more
+generally. For instance, `dplyr::ends_with()` allows you to select all colums
+that end with a certain pattern:
+
+```{r}
+data_raw %>%
+  dplyr::select(dplyr::ends_with("p"))
+```
 
 In any case, you can also specify the columns you want to *drop*. To this end, 
 just add a `-` in front of the selection command:
@@ -432,7 +506,7 @@ data_raw %>%
   dplyr::select(-unemp, -gdp)
 ```
 
-# Merging data sets
+## Merging data sets
 
 Often you need to obtain data from different sources. To merge all your data
 in one single data set, you need to use one of the `*_join()` functions of the
@@ -447,16 +521,11 @@ it is different. Below we illustrate the most common joins (so called
 
 As a guiding example we use the following two data sets:
 
-```{r, include=FALSE}
-gdp_join <- data_raw %>%
-  select(-unemp, -gini)
-```
-
 First, data on income inequality from the 
 [SWIID data base](https://fsolt.org/swiid/):
 
 ```{r}
-swiid_join
+gini_join
 ```
 
 Second, data on GDP per capita from the 
@@ -485,7 +554,7 @@ columns mentioned in `by`, but only keeps those rows for which `x` contains
 an observation:
 
 ```{r}
-dplyr::left_join(x = gdp_join, y = swiid_join, by = c("country", "year"))
+dplyr::left_join(x = gdp_join, y = gini_join, by = c("country", "year"))
 ```
 
 This might introduce `NA`s into the columns of `y`, but not of `x`. It is the
@@ -493,7 +562,7 @@ other way around for `dplyr::right_join()`: it only keeps those rows for
 which `y` contains an observation:
 
 ```{r}
-dplyr::right_join(x = gdp_join, y = swiid_join, by = c("country", "year"))
+dplyr::right_join(x = gdp_join, y = gini_join, by = c("country", "year"))
 ```
 
 `dplyr::inner_join()` is the most restrictive option, keeping only those rows
@@ -501,14 +570,14 @@ for which both `x` and `y` contain an observation (i.e. it never introduces
 `NA`s):
 
 ```{r}
-dplyr::inner_join(x = gdp_join, y = swiid_join, by = c("country", "year"))
+dplyr::inner_join(x = gdp_join, y = gini_join, by = c("country", "year"))
 ```
 
 Finally, `dplyr::full_join()` contains all rows that occur at least in `x` *or*
 `y`, i.e. it might introduce `NA`s in both the columns of `x` and `y`:
 
 ```{r}
-dplyr::full_join(x = gdp_join, y = swiid_join, by = c("country", "year"))
+dplyr::full_join(x = gdp_join, y = gini_join, by = c("country", "year"))
 ```
 
 
@@ -516,14 +585,14 @@ Two final remarks: first, the types of the columns on which you merge the
 data sets must be equal, otherwise R throws an error:
 
 ```{r, error=TRUE}
-swiid_join <- dplyr::mutate(swiid_join, year=as.character(year))
-dplyr::left_join(x = gdp_join, y = swiid_join, by = c("country", "year"))
+gini_join <- dplyr::mutate(gini_join, year=as.character(year))
+dplyr::left_join(x = gdp_join, y = gini_join, by = c("country", "year"))
 ```
 
 Just enforce the correct data type before merging:
 
 ```{r, error=TRUE}
-swiid_join %>% 
+gini_join %>% 
   dplyr::mutate(year=as.integer(year)) %>%
   dplyr::left_join(x = gdp_join, y = ., by = c("country", "year"))
 ```
@@ -532,17 +601,17 @@ Second, you can also merge on columns with different names by passing named
 vectors to `by`:
 
 ```{r}
-swiid_join <- swiid_join %>%
+gini_join <- gini_join %>%
   mutate(Year=as.double(year)) %>%
   select(-year)
-swiid_join
+gini_join
 ```
 
 Then this does not work any more:
 
 ```{r, error=TRUE}
 dplyr::left_join(
-  x = gdp_join, y = swiid_join, 
+  x = gdp_join, y = gini_join, 
   by = c("country", "year"))
 ```
 
@@ -550,11 +619,11 @@ But the named vector fixes it:
 
 ```{r}
 dplyr::left_join(
-  x = gdp_join, y = swiid_join, 
+  x = gdp_join, y = gini_join, 
   by = c("country", "year"="Year"))
 ```
 
-# Grouping and summarising data
+## Grouping and summarising data
 
 The final challenge we consider involves the application of two functions
 (at least in most cases): `dplyr::group_by()` and `dplyr::summarize()`.
@@ -611,7 +680,9 @@ data_raw_grouped %>%
 ```
 
 Note that `dplyr::summarise()` drops all columns that it is not asked to 
-compute summary statistics for, except potential grouping variables.
+compute summary statistics for, except potential grouping variables. There 
+are also some advanced features of the functions, which are explained in
+the official [documentation](https://dplyr.tidyverse.org/reference/summarise.html).
 
 # A final example
 
